# devTemplate

./: CONVENTIONS.md  README.md  agenticProjectSetup.md  pyproject.toml
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
plans/: developmentPlan.md  phase2Plan.md  phase3Plan.md
scripts/: check.py  inspectBackProject.py  inspectMatchFilter.py  inspectReader.py
src/myProject/: __init__.py  example.py
src/simValidation/: __init__.py  _parseMeta.py  backProject.py  matchFilter.py  readPulses.py
tests/: test_example.py  test_smoke.py
