[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sim-validation"
version = "0.1.0"
description = "Temporary tools to validate a radar simulator."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Yap Joon Siong" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    # cuPy via the CUDA 13.x prebuilt-wheel package (this machine has CUDA 13.0).
    # The bare `cupy` sdist would force a from-source MSVC build on Windows.
    "cupy-cuda13x>=14.0",
    "psutil>=5.9",
    # Local backprojection backend. Read-only dependency at
    # C:\Users\yJoonSio\Desktop\ghRepos\sar-ifp -- integrate against it, never edit it.
    # Wired as an editable local source below so `import sarIfp` works under `uv sync`.
    "sar-ifp",
]

[tool.uv.sources]
sar-ifp = { path = "C:/Users/yJoonSio/Desktop/ghRepos/sar-ifp", editable = true }

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "ruff>=0.6",
]

# This project does not ship a CLI; scripts are run directly (typically in a
# debugger for easy variable inspection). No [project.scripts] entry is defined.

[tool.hatch.build.targets.wheel]
packages = ["src/simValidation"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# N (pep8-naming) is deliberately excluded so camelCase functions/variables
# are not flagged -- see CONVENTIONS.md "Naming conventions".
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]  # line length handled by the formatter

[tool.ruff.format]
# Match .editorconfig / .gitattributes so the formatter and editors agree on
# line endings across platforms.
line-ending = "lf"

[tool.mypy]
# Enforces the "type hints required on public functions" rule from
# CONVENTIONS.md. Scoped to the shipped package.
files = ["src/simValidation"]
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
show_error_codes = true

# cupy and the read-only sar-ifp backend ship without py.typed/stubs; treat them
# as Any so the gate (mypy) does not fail on missing library stubs. We do not own
# or type-check those packages.
[[tool.mypy.overrides]]
module = ["cupy", "cupy.*", "sarIfp", "sarIfp.*"]
ignore_missing_imports = true